--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,6 @@
 <html lang="zh-CN"><head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<title>欢欢浏览器隐私政策</title>
+<title>北京实时公交Pro隐私政策</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="renderer" content="webkit">
 <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
@@ -336,7 +336,7 @@ body, h1, h2, p, dl, dt, dd, ul, ol, li {margin:0;padding:0}
 		</ul>
 	</div>
 	<h2 id="q1">引言</h2>
-	<p>欢欢浏览器重视用户的隐私。您在使用我们的服务时，我们可能会收集和使用您的相关信息。我们希望通过本《隐私政策》向您说明，在使用我们的服务时，我们如何收集、使用、储存和分享这些信息，以及我们为您提供的访问、更新、控制和保护这些信息的方式。本《隐私政策》与您所使用的欢欢浏览器服务息息相关，希望您仔细阅读，在需要时，按照本《隐私政策》的指引，作出您认为适当的选择。本《隐私政策》中涉及的相关技术词汇，我们尽量以简明扼要的表述，并提供进一步说明的链接，以便您的理解。</p>
+	<p>北京实时公交Pro重视用户的隐私。您在使用我们的服务时，我们可能会收集和使用您的相关信息。我们希望通过本《隐私政策》向您说明，在使用我们的服务时，我们如何收集、使用、储存和分享这些信息，以及我们为您提供的访问、更新、控制和保护这些信息的方式。本《隐私政策》与您所使用的北京实时公交Pro服务息息相关，希望您仔细阅读，在需要时，按照本《隐私政策》的指引，作出您认为适当的选择。本《隐私政策》中涉及的相关技术词汇，我们尽量以简明扼要的表述，并提供进一步说明的链接，以便您的理解。</p>
 	<h3>您使用或继续使用我们的服务，即意味着同意我们按照本《隐私政策》收集、使用、储存和分享您的相关信息。</h3>
 	<p>如对本《隐私政策》或相关事宜有任何问题，请与我们联系。</p>
 
@@ -389,7 +389,7 @@ body, h1, h2, p, dl, dt, dd, ul, ol, li {margin:0;padding:0}
 		<ul class="inner">
 			<li>向您提供我们的服务；</li>
 			<li>实现“我们可能如何使用信息”部分所述目的；</li>
-			<li>履行我们在《欢欢浏览器服务协议》或本《隐私政策》中的义务和行使我们的权利；</li>
+			<li>履行我们在《北京实时公交Pro服务协议》或本《隐私政策》中的义务和行使我们的权利；</li>
 			<li>理解、维护和改善我们的服务。</li>
 		</ul>
 	</ul>
@@ -458,7 +458,7 @@ body, h1, h2, p, dl, dt, dd, ul, ol, li {margin:0;padding:0}
 
 	<h2 id="q14">隐私政策的适用范围</h2>
 	<p>除某些特定服务外，我们所有的服务均适用本《隐私政策》。这些特定服务将适用特定的隐私政策。<strong>针对某些特定服务的特定隐私政策，将更具体地说明我们在该等服务中如何使用您的信息。</strong>该特定服务的隐私政策构成本《隐私政策》的一部分。<strong>如相关特定服务的隐私政策与本《隐私政策》有不一致之处，适用该特定服务的隐私政策。</strong></p>
-	<p>除本《隐私政策》另有规定外，本《隐私条款》所用词语将与《欢欢浏览器服务协议》所定义的词语具有相同的涵义。</p>
+	<p>除本《隐私政策》另有规定外，本《隐私条款》所用词语将与《北京实时公交Pro服务协议》所定义的词语具有相同的涵义。</p>
 	<h3>请您注意，本《隐私政策》不适用于以下情况：</h3>
 	<ul>
 		<li>通过我们的服务而接入的第三方服务（包括任何第三方网站）收集的信息；</li>
